# marketing-response-campaign-prediction

./: .gitignore  LICENSE  Makefile  README.md  api.py  main.py  main_uvicorn.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
frontend/marketingcampaignprediction/: package-lock.json  package.json
frontend/marketingcampaignprediction/marketingcampaignprediction/: index.html  package-lock.json  package.json
frontend/marketingcampaignprediction/src/: App.tsx  index.tsx
frontend/marketingcampaignprediction/src/api/: api.ts
frontend/marketingcampaignprediction/src/components/: CSVUpload.tsx  CustomerForm.tsx  CustomerFormng.tsx  PredictionResult.tsx  PredictionTable.tsx
frontend/marketingcampaignprediction/src/types/: Customer.ts
frontend/marketingcampaignprediction/src/utils/: csv.ts
marketing_campaign_response/: config.py  dataset.py  features.py  main.py  plots.py
marketing_campaign_response/modeling/: api.py  predict.py  train.py
models/: categorical_mappings.pkl  create_categorical_mappings.py  lgbm_marketing.pkl
tests/: test_features.py
